Added additional support for RU.
Signed-off-by: Stefano Haagmans <stefan0-@hotmail.com>